--- a/compose/nginx/default.conf
+++ b/compose/nginx/default.conf
@@ -8,6 +8,7 @@ server {
     listen       80;
     server_name  localhost;
     root   /var/www/html;
+    client_max_body_size 20M;
 
     # Deny all attempts to access hidden files such as .htaccess, .htpasswd, .DS_Store (Mac).
     # Keep logging the requests to parse later (or to pass to firewall utilities such as fail2ban)
