--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
   wordpress:
     depends_on:
       - db
-    image: wordpress:4.7-fpm
+    build: .
     #  restart: always
     volumes_from:
       - wordpress_data
