--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,9 @@ version: '2.1'
 
 services:
   db:
-    image: mariadb:10.1
+    image: mariadb:10
     volumes:
       - ./db_data:/var/lib/mysql
-    # restart: always
     environment:
       MYSQL_ROOT_PASSWORD: wordpress
       MYSQL_DATABASE: wordpress
@@ -18,7 +17,6 @@ services:
     depends_on:
       - db
     build: .
-    #  restart: always
     volumes_from:
       - wordpress_data
     environment:
@@ -29,29 +27,39 @@ services:
 
   wordpress_data:
     image: busybox
-    # restart: always
     volumes:
       - ./wp_data:/var/www/html
     networks:
       - wordpress_net
+
+  memcached:
+    image: memcached:alpine
+    networks:
+      - wordpress_net
+
+  # redis:
+  #   image: redis:alpine
+  #   networks:
+  #     - wordpress_net
+
 
   nginx:
     build: ./compose/nginx/
     volumes_from:
       - wordpress_data
     networks:
-      wordpress_net:
-        ipv4_address: 172.16.238.10
-        # ipv6_address: 2001:3984:3989::10
+      - wordpress_net
+    ports:
+      - 3000:80
+    depends_on:
+      - wordpress
+      # wordpress_net:
+      #   ipv4_address: 172.16.238.10
 
 networks:
   wordpress_net:
-    # driver: bridge
-    # enable_ipv6: true
     ipam:
       driver: default
       config:
       -
         subnet: 172.16.238.0/24
-      # -
-      #   subnet: 2001:3984:3989::/64
