fix not mandatory field

--- a/compose/nginx/default.conf
+++ b/compose/nginx/default.conf
@@ -69,7 +69,7 @@ server {
             log_not_found off;
     }
 
-    include   /var/www/html/nginx.conf;
+    include   /var/www/html/*ginx.conf;
 
 
 }
